# docs/swagger.yaml
@@ -2421,6 +2421,39 @@ paths:
       summary: Query NFT transaction
       tags:
       - NFT
+  /nft/tx/epoch:
+    get:
+      consumes:
+      - application/json
+      description: Query the specified period of snft transactions
+      parameters:
+      - description: Specify the period id
+        in: query
+        name: id
+        required: true
+        type: string
+      - description: Page, default 1
+        in: query
+        name: page
+        type: string
+      - description: Page size, default 10
+        in: query
+        name: page_size
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/service.NFTTxsRes'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/service.ErrRes'
+      summary: Query SNFT transaction list
+      tags:
+      - NFT
   /nft/tx/page:
     get:
       consumes:
