# router/api/block.go
@@ -26,21 +26,7 @@ func Block(e *gin.Engine) {
 // @Failure     400       {object} service.ErrRes
 // @Router      /block/page [get]
 func pageBlock(c *gin.Context) {
-	req := struct {
-		Page     *int `form:"page"`
-		PageSize *int `form:"page_size"`
-	}{}
-	err := c.BindQuery(&req)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, service.ErrRes{ErrStr: err.Error()})
-		return
-	}
-	page, size, err := utils.ParsePage(req.Page, req.PageSize)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, service.ErrRes{ErrStr: err.Error()})
-		return
-	}
-
+	page, size := utils.ParsePagination(c.Query("page"), c.Query("page_size"))
 	data, err := service.FetchBlocks(page, size)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, service.ErrRes{ErrStr: err.Error()})
