# router/api/epoch.go
@@ -27,24 +27,8 @@ func Epoch(e *gin.Engine) {
 // @Failure     400       {object} service.ErrRes
 // @Router      /epoch [get]
 func pageEpoch(c *gin.Context) {
-	req := struct {
-		Creator  string `form:"creator"`
-		Order    string `form:"order"`
-		Page     *int   `form:"page"`
-		PageSize *int   `form:"page_size"`
-	}{}
-	err := c.BindQuery(&req)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, service.ErrRes{ErrStr: err.Error()})
-		return
-	}
-	page, size, err := utils.ParsePage(req.Page, req.PageSize)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, service.ErrRes{ErrStr: err.Error()})
-		return
-	}
-
-	res, err := service.FetchEpochs(req.Creator, req.Order, page, size)
+	page, size := utils.ParsePagination(c.Query("page"), c.Query("page_size"))
+	res, err := service.FetchEpochs(c.Query("creator"), c.Query("order"), page, size)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, service.ErrRes{ErrStr: err.Error()})
 		return
