# router/api/reward.go
@@ -25,21 +25,7 @@ func Reward(e *gin.Engine) {
 // @Failure     400       {object} service.ErrRes
 // @Router      /reward [get]
 func pageReward(c *gin.Context) {
-	req := struct {
-		Page     *int `form:"page"`
-		PageSize *int `form:"page_size"`
-	}{}
-	err := c.BindQuery(&req)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, service.ErrRes{ErrStr: err.Error()})
-		return
-	}
-	page, size, err := utils.ParsePage(req.Page, req.PageSize)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, service.ErrRes{ErrStr: err.Error()})
-		return
-	}
-
+	page, size := utils.ParsePagination(c.Query("page"), c.Query("page_size"))
 	data, err := service.FetchRewards(page, size)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, service.ErrRes{ErrStr: err.Error()})
